--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "feather-icons": "^4.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.4.0"
   }
 }
